--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+k<!DOCTYPE html>
 <html lang="zxx">
 <head>
 	<title>SolMusic | HTML Template</title>
@@ -72,8 +72,8 @@
 						<p> We don’t offer phone support out of full dedication to our other help channels.<br>
 							 Online support allows us to send and receive links and screenshots, helping us answer questions and figure out issues more efficiently.   </p>
 						<ul>
-							<li>Delhi,241 ,  Siddharth Building, 110019</li>
-							<li>+91 9383764223</li>
+							<li>Yamuna Vihar, Delhi-110053</li>
+							<li>+91 8766237897</li>
 							<li>contact@solmusic.com</li>
 						</ul>
 						<form class="contact-from">
